Bold the options to make them more obvious.  Use a fixed-width font without wrapping for the items, as the options menu relies on this for the display.

--- a/win/nacl/nethack.css
+++ b/win/nacl/nethack.css
@@ -64,6 +64,11 @@ x-overlay {
 #header ul li::after { content: ' | ' }
 #header ul li:last-child::after { content: '' }
 
+.tile-fixedwidth {
+  font-family: monospace;
+  white-space: pre;
+}
+
 .tile-hidden {
   visibility: hidden;
 }
@@ -131,6 +136,10 @@ x-overlay {
 
 .tile-menutable {
   border-spacing: 0;
+}
+
+.tile-menuitem-accel {
+  font-weight: bold;
 }
 
 .tile-menuitem:hover {
